// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager.ui.components.layout.index with default options should render provided components 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#F7F7F7",
      "height": "100vh",
    }
  }
>
  <SplitPane
    allowResize={true}
    defaultSize={250}
    maxSize={-400}
    minSize={150}
    onChange={[Function]}
    onDragFinished={[Function]}
    onDragStarted={[Function]}
    pane1ClassName=""
    pane2ClassName=""
    paneClassName=""
    prefixer={
      Prefixer {
        "_browserInfo": Object {
          "blink": true,
          "browserName": "safari",
          "browserVersion": NaN,
          "cssPrefix": "-webkit-",
          "jsPrefix": "Webkit",
          "name": "Safari",
          "osVersion": NaN,
          "safari": true,
          "x": true,
        },
        "_hasPropsRequiringPrefix": false,
        "_keepUnprefixed": false,
        "_metaData": Object {
          "browserName": "safari",
          "browserVersion": NaN,
          "cssPrefix": "-webkit-",
          "jsPrefix": "Webkit",
          "keepUnprefixed": false,
          "requiresPrefix": Object {},
        },
        "_requiresPrefix": Object {},
        "_userAgent": "Node.js (darwin; U; rv:v8.7.0) AppleWebKit/537.36 (KHTML, like Gecko)",
        "prefixedKeyframes": "keyframes",
      }
    }
    primary="first"
    resizerStyle={
      Object {
        "cursor": "col-resize",
        "height": "auto",
        "width": 10,
        "zIndex": 1,
      }
    }
    size={250}
    split="vertical"
  >
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "paddingRight": 0,
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "flexGrow": 1,
            "height": "100%",
            "width": "100%",
          }
        }
      >
        LeftPanel
      </div>
      <USplit
        shift={5}
        split="vertical"
      />
    </div>
    <SplitPane
      allowResize={true}
      defaultSize={200}
      maxSize={-200}
      minSize={100}
      onChange={[Function]}
      onDragFinished={[Function]}
      onDragStarted={[Function]}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      prefixer={
        Prefixer {
          "_browserInfo": Object {
            "blink": true,
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "name": "Safari",
            "osVersion": NaN,
            "safari": true,
            "x": true,
          },
          "_hasPropsRequiringPrefix": false,
          "_keepUnprefixed": false,
          "_metaData": Object {
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "keepUnprefixed": false,
            "requiresPrefix": Object {},
          },
          "_requiresPrefix": Object {},
          "_userAgent": "Node.js (darwin; U; rv:v8.7.0) AppleWebKit/537.36 (KHTML, like Gecko)",
          "prefixedKeyframes": "keyframes",
        }
      }
      primary="second"
      resizerStyle={
        Object {
          "cursor": "row-resize",
          "height": 10,
          "width": "100%",
          "zIndex": 1,
        }
      }
      size={200}
      split="horizontal"
    >
      <div
        style={
          Object {
            "boxSizing": "border-box",
            "height": "100%",
            "padding": "10px 10px 2px 0",
            "paddingTop": 10,
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "1px solid #ECECEC",
              "borderRadius": 4,
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Preview
        </div>
        <Dimensions
          height={0}
          width={0}
        />
      </div>
      <div
        style={
          Object {
            "alignItems": "stretch",
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "height": "100%",
            "padding": "0px 10px 10px 0",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <USplit
          shift={-5}
          split="horizontal"
        />
        DownPanel
      </div>
    </SplitPane>
  </SplitPane>
</div>
`;

exports[`manager.ui.components.layout.index with goFullScreen=true should render preview in fullscreen mode 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#F7F7F7",
      "height": "100vh",
    }
  }
>
  <SplitPane
    allowResize={false}
    defaultSize={250}
    maxSize={-400}
    minSize={150}
    onChange={[Function]}
    onDragFinished={[Function]}
    onDragStarted={[Function]}
    pane1ClassName=""
    pane2ClassName=""
    paneClassName=""
    prefixer={
      Prefixer {
        "_browserInfo": Object {
          "blink": true,
          "browserName": "safari",
          "browserVersion": NaN,
          "cssPrefix": "-webkit-",
          "jsPrefix": "Webkit",
          "name": "Safari",
          "osVersion": NaN,
          "safari": true,
          "x": true,
        },
        "_hasPropsRequiringPrefix": false,
        "_keepUnprefixed": false,
        "_metaData": Object {
          "browserName": "safari",
          "browserVersion": NaN,
          "cssPrefix": "-webkit-",
          "jsPrefix": "Webkit",
          "keepUnprefixed": false,
          "requiresPrefix": Object {},
        },
        "_requiresPrefix": Object {},
        "_userAgent": "Node.js (darwin; U; rv:v8.7.0) AppleWebKit/537.36 (KHTML, like Gecko)",
        "prefixedKeyframes": "keyframes",
      }
    }
    primary="first"
    resizerStyle={
      Object {
        "cursor": undefined,
        "height": "auto",
        "width": 10,
        "zIndex": 1,
      }
    }
    size={1}
    split="vertical"
  >
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "none",
          "flexDirection": "row",
          "paddingRight": 0,
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "flexGrow": 1,
            "height": "100%",
            "width": "100%",
          }
        }
      >
        LeftPanel
      </div>
      <USplit
        shift={5}
        split="vertical"
      />
    </div>
    <SplitPane
      allowResize={false}
      defaultSize={200}
      maxSize={-200}
      minSize={100}
      onChange={[Function]}
      onDragFinished={[Function]}
      onDragStarted={[Function]}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      prefixer={
        Prefixer {
          "_browserInfo": Object {
            "blink": true,
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "name": "Safari",
            "osVersion": NaN,
            "safari": true,
            "x": true,
          },
          "_hasPropsRequiringPrefix": false,
          "_keepUnprefixed": false,
          "_metaData": Object {
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "keepUnprefixed": false,
            "requiresPrefix": Object {},
          },
          "_requiresPrefix": Object {},
          "_userAgent": "Node.js (darwin; U; rv:v8.7.0) AppleWebKit/537.36 (KHTML, like Gecko)",
          "prefixedKeyframes": "keyframes",
        }
      }
      primary="second"
      resizerStyle={
        Object {
          "cursor": undefined,
          "height": 10,
          "width": "100%",
          "zIndex": 1,
        }
      }
      size={1}
      split="horizontal"
    >
      <div
        style={
          Object {
            "boxSizing": "border-box",
            "height": "100%",
            "padding": "10px 10px 2px 0",
            "paddingTop": 10,
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": 0,
              "height": "100%",
              "left": "0px",
              "margin": 0,
              "overflow": "auto",
              "padding": 0,
              "position": "fixed",
              "right": "0px",
              "top": "0px",
              "webkitOverflowScrolling": "touch",
              "width": "100%",
              "zIndex": 1,
            }
          }
        >
          Preview
        </div>
        <Dimensions
          height={0}
          width={0}
        />
      </div>
      <div
        style={
          Object {
            "alignItems": "stretch",
            "boxSizing": "border-box",
            "display": "none",
            "flexDirection": "column",
            "height": "100%",
            "padding": "0px 10px 10px 0",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <USplit
          shift={-5}
          split="horizontal"
        />
        DownPanel
      </div>
    </SplitPane>
  </SplitPane>
</div>
`;

exports[`manager.ui.components.layout.index with showDownPanel=false should hide the downPanel 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#F7F7F7",
      "height": "100vh",
    }
  }
>
  <SplitPane
    allowResize={true}
    defaultSize={250}
    maxSize={-400}
    minSize={150}
    onChange={[Function]}
    onDragFinished={[Function]}
    onDragStarted={[Function]}
    pane1ClassName=""
    pane2ClassName=""
    paneClassName=""
    prefixer={
      Prefixer {
        "_browserInfo": Object {
          "blink": true,
          "browserName": "safari",
          "browserVersion": NaN,
          "cssPrefix": "-webkit-",
          "jsPrefix": "Webkit",
          "name": "Safari",
          "osVersion": NaN,
          "safari": true,
          "x": true,
        },
        "_hasPropsRequiringPrefix": false,
        "_keepUnprefixed": false,
        "_metaData": Object {
          "browserName": "safari",
          "browserVersion": NaN,
          "cssPrefix": "-webkit-",
          "jsPrefix": "Webkit",
          "keepUnprefixed": false,
          "requiresPrefix": Object {},
        },
        "_requiresPrefix": Object {},
        "_userAgent": "Node.js (darwin; U; rv:v8.7.0) AppleWebKit/537.36 (KHTML, like Gecko)",
        "prefixedKeyframes": "keyframes",
      }
    }
    primary="first"
    resizerStyle={
      Object {
        "cursor": "col-resize",
        "height": "auto",
        "width": 10,
        "zIndex": 1,
      }
    }
    size={250}
    split="vertical"
  >
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "paddingRight": 0,
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "flexGrow": 1,
            "height": "100%",
            "width": "100%",
          }
        }
      >
        LeftPanel
      </div>
      <USplit
        shift={5}
        split="vertical"
      />
    </div>
    <SplitPane
      allowResize={false}
      defaultSize={200}
      maxSize={-200}
      minSize={100}
      onChange={[Function]}
      onDragFinished={[Function]}
      onDragStarted={[Function]}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      prefixer={
        Prefixer {
          "_browserInfo": Object {
            "blink": true,
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "name": "Safari",
            "osVersion": NaN,
            "safari": true,
            "x": true,
          },
          "_hasPropsRequiringPrefix": false,
          "_keepUnprefixed": false,
          "_metaData": Object {
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "keepUnprefixed": false,
            "requiresPrefix": Object {},
          },
          "_requiresPrefix": Object {},
          "_userAgent": "Node.js (darwin; U; rv:v8.7.0) AppleWebKit/537.36 (KHTML, like Gecko)",
          "prefixedKeyframes": "keyframes",
        }
      }
      primary="second"
      resizerStyle={
        Object {
          "cursor": undefined,
          "height": 10,
          "width": "100%",
          "zIndex": 1,
        }
      }
      size={1}
      split="horizontal"
    >
      <div
        style={
          Object {
            "boxSizing": "border-box",
            "height": "100%",
            "padding": "10px 10px 2px 0",
            "paddingTop": 10,
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "1px solid #ECECEC",
              "borderRadius": 4,
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Preview
        </div>
        <Dimensions
          height={0}
          width={0}
        />
      </div>
      <div
        style={
          Object {
            "alignItems": "stretch",
            "boxSizing": "border-box",
            "display": "none",
            "flexDirection": "column",
            "height": "100%",
            "padding": "0px 10px 10px 0",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <USplit
          shift={-5}
          split="horizontal"
        />
        DownPanel
      </div>
    </SplitPane>
  </SplitPane>
</div>
`;

exports[`manager.ui.components.layout.index with showLeftPanel=false should hide the leftPanel 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#F7F7F7",
      "height": "100vh",
    }
  }
>
  <SplitPane
    allowResize={false}
    defaultSize={250}
    maxSize={-400}
    minSize={150}
    onChange={[Function]}
    onDragFinished={[Function]}
    onDragStarted={[Function]}
    pane1ClassName=""
    pane2ClassName=""
    paneClassName=""
    prefixer={
      Prefixer {
        "_browserInfo": Object {
          "blink": true,
          "browserName": "safari",
          "browserVersion": NaN,
          "cssPrefix": "-webkit-",
          "jsPrefix": "Webkit",
          "name": "Safari",
          "osVersion": NaN,
          "safari": true,
          "x": true,
        },
        "_hasPropsRequiringPrefix": false,
        "_keepUnprefixed": false,
        "_metaData": Object {
          "browserName": "safari",
          "browserVersion": NaN,
          "cssPrefix": "-webkit-",
          "jsPrefix": "Webkit",
          "keepUnprefixed": false,
          "requiresPrefix": Object {},
        },
        "_requiresPrefix": Object {},
        "_userAgent": "Node.js (darwin; U; rv:v8.7.0) AppleWebKit/537.36 (KHTML, like Gecko)",
        "prefixedKeyframes": "keyframes",
      }
    }
    primary="first"
    resizerStyle={
      Object {
        "cursor": undefined,
        "height": "auto",
        "width": 10,
        "zIndex": 1,
      }
    }
    size={1}
    split="vertical"
  >
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "none",
          "flexDirection": "row",
          "paddingRight": 0,
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "flexGrow": 1,
            "height": "100%",
            "width": "100%",
          }
        }
      >
        LeftPanel
      </div>
      <USplit
        shift={5}
        split="vertical"
      />
    </div>
    <SplitPane
      allowResize={true}
      defaultSize={200}
      maxSize={-200}
      minSize={100}
      onChange={[Function]}
      onDragFinished={[Function]}
      onDragStarted={[Function]}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      prefixer={
        Prefixer {
          "_browserInfo": Object {
            "blink": true,
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "name": "Safari",
            "osVersion": NaN,
            "safari": true,
            "x": true,
          },
          "_hasPropsRequiringPrefix": false,
          "_keepUnprefixed": false,
          "_metaData": Object {
            "browserName": "safari",
            "browserVersion": NaN,
            "cssPrefix": "-webkit-",
            "jsPrefix": "Webkit",
            "keepUnprefixed": false,
            "requiresPrefix": Object {},
          },
          "_requiresPrefix": Object {},
          "_userAgent": "Node.js (darwin; U; rv:v8.7.0) AppleWebKit/537.36 (KHTML, like Gecko)",
          "prefixedKeyframes": "keyframes",
        }
      }
      primary="second"
      resizerStyle={
        Object {
          "cursor": "row-resize",
          "height": 10,
          "width": "100%",
          "zIndex": 1,
        }
      }
      size={200}
      split="horizontal"
    >
      <div
        style={
          Object {
            "boxSizing": "border-box",
            "height": "100%",
            "padding": "10px 10px 2px 0",
            "paddingTop": 10,
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "1px solid #ECECEC",
              "borderRadius": 4,
              "height": "100%",
              "width": "100%",
            }
          }
        >
          Preview
        </div>
        <Dimensions
          height={0}
          width={0}
        />
      </div>
      <div
        style={
          Object {
            "alignItems": "stretch",
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "height": "100%",
            "padding": "0px 10px 10px 0",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <USplit
          shift={-5}
          split="horizontal"
        />
        DownPanel
      </div>
    </SplitPane>
  </SplitPane>
</div>
`;
